Resolves failed index task issue.